--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
                     <div class="form-group">
                         <label>E-mail address</label>
-                        <input type="text" class="form-control" name="email"/>
+                        <input type="email" class="form-control" name="email"/>
                     </div>
 
                     <div class="form-group">
